♻️ Refactored API and added SQL data script
