# backend/swagger.yaml
@@ -272,7 +272,24 @@ paths:
                     example: transaction-id
           x-responseId: SuccessfulOperation
           x-uppercaseResponseId: SUCCESSFUL_OPERATION
-  /order/pending-payment:
+  /order/pending:
+    get:
+      tags:
+        - All
+      summary: >-
+        Get list of pending orders
+      responses:
+        "200":
+          description: Order status
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Order"
+          x-responseId: SuccessfulOperation
+          x-uppercaseResponseId: SUCCESSFUL_OPERATION
+  /order/outstanding:
     get:
       tags:
         - All
@@ -289,29 +306,12 @@ paths:
                   $ref: "#/components/schemas/Order"
           x-responseId: SuccessfulOperation
           x-uppercaseResponseId: SUCCESSFUL_OPERATION
-  /order/pending-response:
+  /order/complete:
     get:
       tags:
         - All
       summary: >-
-        Get list of pending payment orders
-      responses:
-        "200":
-          description: Order status
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Order"
-          x-responseId: SuccessfulOperation
-          x-uppercaseResponseId: SUCCESSFUL_OPERATION
-  /order/settled:
-    get:
-      tags:
-        - All
-      summary: >-
-        Get list of settled orders
+        Get list of completed orders, including both completed and refunded
       responses:
         "200":
           description: Order status
@@ -339,9 +339,13 @@ components:
               "PendingResponse",
               "Delivering",
               "Refunding",
-              "Paid",
+              "Completed",
               "Refunded",
             ]
+        amount:
+          description: Order amount in base unit of CRO
+          type: string
+          example: "1000"
         buyer_public_key:
           type: string
           example: 03bd1217267d99cbc1c38b9ef036eb2ffd6a2c5f6225a0ef9884d859a0a0bcddcd
